# OOP_course_project

./: .gitignore  Makefile  app.py  pyproject.toml  tox.ini
ocp/: app.py  commands.py  config.py  create_app.py  flaskapp.py
ocp/db/: __init__.py  fixtures.py
ocp/model/: user.py
ocp/test/: conftest.py  test_app.py  test_db_seed.py
